--- a/wp-content/themes/mystile/style.css
+++ b/wp-content/themes/mystile/style.css
@@ -74,7 +74,7 @@ label[for="ship-to-different-address-checkbox"] {background-color: #eee; color:#
 #lienhe .tro-giup{float:left; width:40px; height:183px; background: #ddd; border-bottom:1px solid #ddd; border-top: 1px solid #ddd; border-right:1px solid #ddd; opacity:.6; filter: alpha(opacity=60);}
 #lienhe .tro-giup p{transform: rotate(-90deg); -webkit-transform: rotate(-90deg); white-space: nowrap; margin: 125px 0 0 0; cursor:pointer;}
 .block1.col-left:hover > .icon-truck, .block2.col-left:hover > .icon-calendar, .block3.col-left:hover > .icon-credit-card, .block4.col-left:hover > .icon-money, .block5.col-left:hover > .icon-thumbs-up-alt, .block6.col-left:hover > .icon-smile{color:#D60059;}
-.block1.col-left:hover > .text, .block2.col-left:hover > .text, .block3.col-left:hover > .text, .block4.col-left:hover > .text, .block5.col-left:hover >  .text, .blocki6.col-left:hover > .text{color:#D60059;}
+.block1.col-left:hover > .text, .block2.col-left:hover > .text, .block3.col-left:hover > .text, .block4.col-left:hover > .text, .block5.col-left:hover >  .text, .block6.col-left:hover > .text{color:#D60059;}
 .page-title{margin-top:10px;}
 @media (max-width: 767px) {
 #header .search, .usp{width:100%}
@@ -1981,7 +1981,7 @@ dl.variation dd ul {
 .price del {
   opacity: 0.5;
   filter: alpha(opacity=@opacity * 100);
-  font-size:13px;
+  font-size:11px;
   font-weight:normal;
 }
 .price ins {
@@ -2007,10 +2007,11 @@ ul.products li.product {
   width: 48%;
   margin-right: 3.2%;
   margin-bottom: 1.618em;
-  text-align: center;
+  text-align: left;
 }
 ul.products li.product h3 {
 /*  margin-bottom: 0;*/
+	padding:0 6px;
 }
 ul.products li.product a:hover h3 {
   color: #CC0066;
